tests/ui/concurrent_cached_name_invalid_ident.rs
use cached::macros::concurrent_cached;

#[concurrent_cached(name = "bad-name")]
fn f(x: i32) -> i32 {
    x
}

fn main() {}
